# deepfm

./: .gitignore  CLAUDE.md  Makefile  README.md  prd.md  progress.md  pyproject.toml  todo.md
configs/: attention_deepfm_movielens.yaml  deepfm_movielens.yaml  xdeepfm_movielens.yaml  xdeepfm_movielens_cin_tuned.yaml
deepfm/: __init__.py  __main__.py  cli.py  config.py
deepfm/data/: dataset.py  movielens.py  schema.py  transforms.py
deepfm/models/: __init__.py  attention_deepfm.py  base.py  deepfm.py  xdeepfm.py
deepfm/models/layers/: __init__.py  attention.py  cin.py  dnn.py  embedding.py  fm.py
deepfm/training/: __init__.py  metrics.py  trainer.py
deepfm/utils/: __init__.py  io.py  logging.py  seeding.py
notebooks/: feature_embedding_guide.ipynb  model_layers_guide.ipynb  movielens_adapter_guide.ipynb
notes/: deepfm.md  pyproject_toml.md
outputs/attention_deepfm_movielens/: results.json
outputs/attn_reg/: results.json
outputs/deepfm_movielens/: best_model.pt  results.json
outputs/deepfm_mvl/: results.json
outputs/xdeepfm_cin_tuned/: results.json
outputs/xdeepfm_movielens/: results.json
outputs/xdeepfm_movielens_cin64/: results.json
outputs/xdeepfm_mvl/: results.json
tests/: test_dataset.py  test_integration.py  test_layers.py  test_models.py  test_schema.py  test_trainer.py  test_transforms.py
